fix: [FFM-5232]: Amending spacing problems in SDK dialogue (#12525)
* fix: [FFM-5232]: Amending spacing problems in SDK dialogue

--- a/src/modules/75-cf/components/AddKeyDialog/AddKeyDialog.module.scss
+++ b/src/modules/75-cf/components/AddKeyDialog/AddKeyDialog.module.scss
@@ -8,8 +8,13 @@
   overflow: auto;
 }
 
+.dialog {
+  width: 550px;
+}
+
 .nameTextbox {
   margin: 0;
+  width: 450px;
 }
 
 .card-select {
